# PetStory

./: .gitignore  .gitmodules  CMakeLists.txt  Config.json  Config.xml  EditorConfig.json  EditorConfig.xml  MakeWindowsMSVSProject.bat  ProjectSettings.json  README.md  promt.txt
.github/workflows/: cmake-multi-platform.yml  linux-cmake.yml
Assets/: Basic.atlas  BasicAtlas.atlas  Blue.proto  Camera Actor.proto  Camera.proto  Chip.js  Chips.proto  Empty.proto  Label.proto  UI Widget.proto  Walls.proto  height.anim  standard copy.proto  standard.proto  test.js  test.scn  test2.scn  width.anim
Assets/Animals/Dog/: Dog  Dog.atlas
Assets/Game field/: Gamefield.atlas
Assets/Prefabs/: ChipBase.proto  ChipBlue.proto  ChipGreen.proto  ChipOrange.proto  ChipRed.proto  ChipViolet.proto  ChipYellow.proto  Green.proto  Red.proto
Assets/Scripts/: Chip.js  ChipSpawner.js  test.js
Sources/Editor/: CodeToolCache.xml  EditorLib.cpp
Sources/Game/: Chip.cpp  Chip.h  ChipsSpawner.cpp  ChipsSpawner.h  CodeToolCache.xml  GameApplication.cpp  GameApplication.h  GameLib.cpp  TestApplication.cpp  TestApplication.h
